fixed errors on safari

--- a/styles.scss
+++ b/styles.scss
@@ -171,7 +171,7 @@ p {
     .contact-box {
         display: inline-block;
         margin-top: 3%;
-        width: 24%;
+        width: 19%;
     }
     a {
         text-decoration: none;
